tests/test_enum/good/quick_pattern_check.catala_en
## Article

```catala
declaration enumeration E:
  -- Case1 content integer
  -- Case2

declaration scope A:
  context output x content E
  context output y content boolean
  context output z content boolean

scope A:
  definition x equals Case1 content 2
  definition y equals x with pattern Case1
  definition z equals x with pattern Case2
```



```catala-test-inline
$ catala Typecheck --check-invariants
[RESULT] Invariant typing_defaults checked. result: [66/66]
[RESULT] Invariant match_inversion checked. result: [2/2]
[RESULT] Invariant app_inversion checked. result: [3/3]
[RESULT] Invariant no_return_a_function checked. result: [4/4]
[RESULT] Invariant no_partial_evaluation checked. result: [3/3]
[RESULT] Invariant default_no_arrow checked. result: [9/9]
[RESULT] Typechecking successful!
```

```catala-test-inline
$ catala Interpret -s A
[RESULT] Computation successful! Results:
[RESULT] x = Case1 2
[RESULT] y = true
[RESULT] z = false
```
```catala-test-inline
$ catala Interpret_Lcalc -s A --avoid-exceptions --optimize
[RESULT] Computation successful! Results:
[RESULT] x = Case1 2
[RESULT] y = true
[RESULT] z = false
```
